--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
     "version": "2.0.1",
     "dependencies": {
         "jquery":"1.9.1",
-        "requirejs":"2.1.8",
+        "reqirejs":"2.1.8",
         "requirejs-text":"2.0.3",
         "knockout.js":"2.3.0"
     }
